--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ A:link {text-decoration: none} -->
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
+     <img src="python.png"/>
 <header>
     <h1>Muhammed Onur Özgökçe</h1>
     <nav>
