--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@ A:link {text-decoration: none} -->
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
-     <img src="python.png"/>
 <header>
+   
+    <img src="python.png" style="padding-left:57px" width="200" height="80"/>
+	
     <h1>Muhammed Onur Özgökçe</h1>
     <nav>
         <ul>
