--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ A:link {text-decoration: none} -->
                     <strong >Haşim İşcan İlkokulu</strong>
                 </li>
                 <li>
-                    <strong >Zübeyde Hanım Ortaokulu<strong>
+                    <strong >Zübeyde Hanım Ortaokulu</strong>
                 </li>
 				<li>
                     <strong >Kabataş Erkek Lisesi</strong><br>
@@ -62,6 +62,18 @@ A:link {text-decoration: none} -->
                 </li>
             </ol>
         </section>
+		<section id="hayallerim">
+            <h2>Hayallerim</h2>
+            <ul>
+                <li>
+                    Yazılım alanında uzmanlaşmak
+                </li>
+                <li>
+                    Robotik Başkanı Olmak
+                </li>
+            </ul>
+        </section>
+
     </article>
 </main>
 <footer>
